# py-songs-to-karaoke

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
scripts/: whisper.sh
src/: audio.py  library.py  player.py  transcription.py  utils.py
src/gui/: import_dialog.py  main_window.py
tests/: test_audio.py  test_library.py  test_player_utils.py  test_transcription.py  test_utils.py
